--- a/jquery.html
+++ b/jquery.html
@@ -4,4 +4,9 @@
  <body>
  
 </body> 
+<script
+  src="https://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+  crossorigin="anonymous"></script>
+  
 </html> 
