--- a/jquery.html
+++ b/jquery.html
@@ -1,12 +1,133 @@
  <!DOCTYPE>
  <html>
- 
- <body>
- 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script--> 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+<style>
+
+
+    
+.button-like {
+  border: 2px solid #8a8a8a;
+  background-color: transparent;
+  text-decoration: none;
+  padding: 1rem;
+  position: relative;
+  vertical-align: middle;
+  text-align: center;
+  display: inline-block;
+  border-radius: 3rem;
+  color: #8a8a8a;
+  transition: all ease 0.4s;
+}
+
+.button-like span {
+  margin-left: 0.5rem;
+}
+
+.button-like .fa,
+.button-like span {
+  transition: all ease 0.4s;
+}
+
+.button-like:focus {
+  background-color: transparent;
+}
+.button-like:focus .fa,
+.button-like:focus span {
+  color: #8a8a8a;
+}
+.button-like:hover {
+  border-color: #cc4b37;
+  background-color: transparent;
+}
+.button-like:hover .fa,
+.button-like:hover span {
+  color: #cc4b37;
+}
+.liked {
+  background-color: #cc4b37;
+  border-color: #cc4b37;
+}
+.liked .fa,
+.liked span {
+  color: #fefefe;
+}
+.liked:focus {
+  background-color: #cc4b37;
+}
+.liked:focus .fa,
+.liked:focus span {
+  color: #fefefe;
+}
+.liked:hover {
+  background-color: #cc4b37;
+  border-color: #cc4b37;
+}
+.liked:hover .fa,
+.liked:hover span {
+  color: #fefefe;
+}
+</style>
+
+<body>
+    <div class="row" id="news">
+        <!--div class='card'>
+            <div class="card-body">
+                <img class="card-img-top" src="..." alt="">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                    Abdurrahman deneme
+                </p>
+            </div>
+        </div-->
+    </div>
 </body> 
+
 <script
   src="https://code.jquery.com/jquery-3.4.0.min.js"
   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
   crossorigin="anonymous"></script>
   
+  <script>
+    (function($){
+	 $(function(){
+
+         $.ajax({
+             url: 'https://api.nytimes.com/svc/topstories/v2/science.json?api-key=kp2R8K4qEyG2x16SSMidabp0lv3m6HB6',
+         }).done(function (data) {
+             console.log(data);
+             for (var i = 0; i < data.results.length; i++) {
+                 var newsCard = '<div class="card col-md-3" id="news">\
+            <div class="card-body"> \
+                <img class="card-img-top" src='+ (data.results[i].multimedia[4] != undefined ? data.results[i].multimedia[4].url : "") + ' alt=""> \
+                <h5 class="card-title">'+ data.results[i].title + '</h5>\
+                <p class="card-text">\
+                    '+ data.results[i].abstract + ' \
+                </p> \
+            </div> \
+                 <div class="card-body d-flex align-items-center"> \
+                    <a href="'+ data.results[i].short_url + '" class="card-link">Read More</a> \
+                    <button class="button button-like mx-2">\
+                        <i class="fa fa-heart"></i>\
+                    <span>Like</span>\
+                    </button>\
+                 <button class="btn btn-success comment">Add Comment</button> \
+                 </div> \
+	        </div>';
+                 $("#news").append(newsCard);
+             }
+         });
+          $('body')
+              .on('click', ".button-like", function (event) {
+
+       $(this).toggleClass("liked");
+    })
+
+	 });
+
+	})(jQuery);
+  </script>
 </html> 
